// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Sidebar.Footer
    className=""
    key=".0"
  >
    <div />
  </Sidebar.Footer>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
<Default__StyledSpan>
  <Sidebar.Footer
    className="my-class"
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Footer>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with other props 1`] = `
<Default__StyledSpan>
  <Sidebar.Footer
    className=""
    key=".0"
    oneProp={1}
    twoProp={2}
  >
    <div />
  </Sidebar.Footer>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
<Default__StyledSpan>
  <Sidebar.Footer
    className="my-class"
    key=".0"
  >
    <div />
  </Sidebar.Footer>
</Default__StyledSpan>
`;
